Fix the  Close button alignment

--- a/src/app/sticky/sticky.component.css
+++ b/src/app/sticky/sticky.component.css
@@ -35,7 +35,7 @@
 	background-color: rgb(238, 73, 73);
 	z-index:1;
 	margin: auto;
-	padding: 2px;
+	padding: 1px;
 	border-radius: 50%;
 	text-align: center;
 	color: white;
